[gd_scene load_steps=6 format=3 uid="uid://b6ej3ryq448mt"]

[ext_resource type="Texture2D" uid="uid://dhdfb146b3ixd" path="res://pianoSquareBlackPress.png" id="1_8n47o"]
[ext_resource type="Script" path="res://pianoKeySharp.gd" id="1_larjr"]
[ext_resource type="Texture2D" uid="uid://chnpepc0o23x6" path="res://pianoSquareBlack.png" id="2_2r5lr"]
[ext_resource type="AudioStream" uid="uid://xfc0m46mhtux" path="res://audio/Middle-C-Note.mp3" id="4_rqehk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_o540o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2r5lr")
}],
"loop": false,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8n47o")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[node name="key" type="Node2D"]
script = ExtResource("1_larjr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o540o")
animation = &"off"

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimatedSprite2D/Area2D"]
scale = Vector2(0.459224, 4.70778)
polygon = PackedVector2Array(-10.8879, -9.98347, 10.8879, -9.98347, 10.8879, 9.98347, -10.8879, 9.98347)

[node name="keyTimer" type="Timer" parent="."]

[node name="keySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rqehk")
pitch_scale = 1.04

[connection signal="input_event" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="keyTimer" to="." method="_on_timer_timeout"]
